# fox-api

./: Cargo.toml
.github/workflows/: build.yml
src/: ascii_art.txt  main.rs  utils.rs
src/fox_logger/: mod.rs
src/permissions/: mod.rs
src/server_config/: mod.rs
