[package]
name = "cls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
actix-web = {version = "4.13.0",default-features = false,features = ["macros"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
